--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         padding: 15px;
       }
       .options {
-        flex: 1;
+        /* flex: 1; */
         color: white;
         background-color: rgba(0, 0, 0, 0.2);
         padding: 20px 30px;
@@ -86,6 +86,39 @@
         background-color: rgb(132, 39, 6);
         transition: 0.2s ease;
       }
+      .flex-container {
+        width: 100%;
+        height: auto;
+        display: flex;
+        text-align: center;
+        margin: 0 auto;
+      }
+      .flex-box {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        background-color: rgb(16, 14, 14);
+        color: white;
+        text-align: center;
+        margin: 30px;
+        border-radius: 15px;
+
+        margin-inline: 10px;
+      }
+      .flex-box img {
+        width: 100%;
+      }
+      .item-name {
+        font-weight: 600;
+        font-size: 14px;
+      }
+      .price-tag {
+        font-weight: 100;
+        margin-top: 140px;
+        font-size: small;
+        position: absolute;
+        margin: 40px 70px 0 70px;
+      }
     </style>
     <!-- so we get access to socket.io from its package that we installed -->
   </head>
@@ -97,7 +130,7 @@
       <div class="options">
         <ul>
           <li>
-            <button class="option1">
+            <button class="option1" id="option1">
               Select <strong>1.</strong> to place an order
             </button>
           </li>
@@ -122,13 +155,41 @@
             </button>
           </li>
         </ul>
+        <div class="response" id="response"></div>
+        <div class="flex-container" id="flex-container">
+          <!-- append from here -->
+          <div class="flex-box">
+            <h6 class="item-name">place item here</h6>
+            <img src="" alt="" />
+            <p class="price-tag"></p>
+          </div>
+          <div class="flex-box">
+            <h6 class="item-name">place item here</h6>
+            <img src="" alt="" />
+            <p class="price-tag"></p>
+          </div>
+          <div class="flex-box">
+            <h6 class="item-name">place item here</h6>
+            <img src="" alt="" />
+            <p class="price-tag"></p>
+          </div>
+          <div class="flex-box">
+            <h6 class="item-name">place item here</h6>
+            <img src="images/cake.jpg" alt="" />
+            <p class="price-tag">#3000</p>
+          </div>
+        </div>
       </div>
-      <div class="footer">
+      <!-- <div class="footer">
         <form action="">
-          <input type="text" />
+          <input
+            type="text"
+            id="submitText"
+            placeholder="Select 1 then enter the id of the item and press send to place an order"
+          />
           <button type="submit" id="submit">Send</button>
         </form>
-      </div>
+      </div> -->
     </div>
     <script src="socket.io/socket.io.js"></script>
     <script>
@@ -139,15 +200,26 @@
         console.log(socket.id);
       });
 
-      const btn = document.getElementById("submit");
-      btn.addEventListener("click", () => {
+      const option1 = document.getElementById("option1");
+      option1.addEventListener("click", () => {
         // emitting events
-        socket.emit("message", "this message is from client");
+        socket.emit("items_to_order", 1);
       });
 
-      //handling an event emitted from the server
-      socket.on("server-message", (msg) => {
-        console.log(`server message: ${msg}`);
+      socket.on("the_items_to_order", (data) => {
+        const slideContainer = document.getElementById("slide-container");
+        data.forEach((element, i) => {
+          slideContainer.insertAdjacentHTML(
+            "afterend",
+            `
+            <div class="flex-box">
+             <h6 class="item-name">${element.name}</h6>
+             <img src="${element.image}" alt="" />
+             <p class="price-tag">#${element.price}</p>
+            </div>
+          `
+          );
+        });
       });
 
       // if we dont know the server event id(name):
