--- a/index.html
+++ b/index.html
@@ -88,12 +88,9 @@
         transition: 0.2s ease;
       }
       .flex-container {
-        width: 100%;
         height: auto;
         display: flex;
-        flex-direction: row;
-        text-align: center;
-        margin: 0 55px;
+        justify-content: center;
       }
       .flex-box {
         position: relative;
@@ -133,17 +130,17 @@
         font-size: large;
       }
       .order-completed {
-        margin-top: 30px;
-        margin-left: 120px;
-        font-size: larger;
+        border: 5px solid green;
+        margin: 50px auto 0 auto;
+        font-size: 55px;
         color: green;
         font-weight: bolder;
         font-style: oblique;
       }
       .order-not-completed {
-        margin-top: 30px;
-        margin-left: 120px;
-        font-size: larger;
+        border: 5px solid red;
+        margin: 50px auto 0 auto;
+        font-size: 55px;
         color: red;
         font-weight: bolder;
         font-style: oblique;
@@ -151,6 +148,14 @@
       /* .hidden {
         display: none;
       } */
+      .current-order-msg {
+        border: 5px solid yellow;
+        margin: 50px auto 0 auto;
+        font-size: 55px;
+        color: yellow;
+        font-weight: bolder;
+        font-style: oblique;
+      }
       #order_section {
         display: none;
         justify-items: center;
@@ -184,6 +189,16 @@
         text-align: left;
         background-color: gold;
         color: white;
+      }
+      button {
+        background-color: orange;
+        padding: 10px;
+        border: none;
+        border-radius: 8px;
+      }
+      button:disabled {
+        opacity: 0.5;
+        pointer-events: stroke;
       }
     </style>
     <!-- so we get access to socket.io from its package that we installed -->
@@ -254,6 +269,7 @@
       });
 
       const option1 = document.getElementById("option1");
+      const option98 = document.getElementById("option98");
       const Option1List = document.getElementById("listOption1");
       const Option98List = document.getElementById("listOption98");
       const placeOrderBtn = document.getElementById("place-order");
@@ -263,16 +279,16 @@
       const orders = document.getElementById("orders");
       const currentOrder = document.getElementById("current-order");
 
+      function enableButton(btnDOM) {
+        const button = btnDOM;
+        button.disabled = false;
+      }
+
       option1.addEventListener("click", () => {
+        enableButton(document.getElementById("option98"));
         // emitting events
-        console.log("workingggggggg?");
         socket.emit("items_to_order", 1);
-        // disabling the button 1
-        // Option1List.innerHTML = `
-        // <button disabled class="option1" id="option1">
-        //       Select <strong>1.</strong> to place an order
-        // </button>
-        // `;
+
         flexContainer.innerHTML = `
         <span class="empty" id="empty"></span>
         `;
@@ -345,8 +361,6 @@
         }
       });
 
-      const option98 = document.getElementById("option98");
-
       option98.addEventListener("click", function (e) {
         e.preventDefault();
         orderSection.style.display = "grid";
@@ -395,10 +409,10 @@
       socket.on("current_order_item", (lastOrderInArray) => {
         if (lastOrderInArray) {
           currentOrder.innerHTML = `
-         <p style="color:yellow;text-align:center;font-size: 25px;font-weight: 700"> Your current order is ${lastOrderInArray.name}, placed at ${lastOrderInArray.time} and its status is '${lastOrderInArray.orderStatus}' </p>`;
+         <p class="current-order-msg"> Your current order is ${lastOrderInArray.name}, placed on ${lastOrderInArray.time} and its status is '${lastOrderInArray.orderStatus}' </p>`;
         } else {
           currentOrder.innerHTML = `
-          <p style="color:red;text-align:center;font-size: 25px;font-weight: 700">No current order yet</p>
+          <p class="order-not-completed">No current order yet</p>
           `;
         }
       });
@@ -412,11 +426,11 @@
       socket.on("cancel_order", (data) => {
         if (data) {
           currentOrder.innerHTML = `
-            <p style="color:red;text-align:center;font-size: 25px;font-weight: 700">Your current order of ${data.name} placed at ${data.time} has been cancelled 🚮</p>
+            <p class='order-not-completed'>Your current order of ${data.name} placed at ${data.time} has been cancelled 🚮</p>
             `;
         } else {
           currentOrder.innerHTML = `
-            <p style="color:red;text-align:center;font-size: 25px;font-weight: 700">No order to delete</p>
+            <p class="order-not-completed">No order to delete</p>
             `;
         }
       });
