--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant chatbot</title>
-    <!-- <link rel="stylesheet" href="index.css" /> -->
+    <link rel="stylesheet" href="index.css" />
+    <!--
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
       * {
         margin: 0;
         padding: 0;
@@ -28,7 +29,6 @@
         display: flex;
         flex-direction: column;
         box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
-        /* background-color: rgb(245, 188, 81); */
       }
       .header h1 {
         color: white;
@@ -37,7 +37,6 @@
         padding: 15px;
       }
       .options {
-        /* flex: 1; */
         height: 100vh;
         color: white;
         background-color: rgba(228, 225, 225, 0.2);
@@ -150,9 +149,6 @@
         font-weight: bolder;
         font-style: oblique;
       }
-      /* .hidden {
-        display: none;
-      } */
       .current-order-msg {
         border: 5px solid yellow;
         text-align: center;
@@ -207,6 +203,7 @@
         pointer-events: stroke;
       }
     </style>
+    -->
     <!-- so we get access to socket.io from its package that we installed -->
   </head>
   <body>
