--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant chatbot</title>
-    <link rel="stylesheet" href="index.css" />
-    <!--
+    <!-- <link rel="stylesheet" href="index.css" /> -->
     <style>
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
       * {
         margin: 0;
         padding: 0;
@@ -203,8 +202,6 @@
         pointer-events: stroke;
       }
     </style>
-    -->
-    <!-- so we get access to socket.io from its package that we installed -->
   </head>
   <body>
     <div class="container">
@@ -283,13 +280,7 @@
       const currentOrder = document.getElementById("current-order");
       const orderMsg = document.getElementById("order-message");
 
-      function changeAttribute(elementId, attributeName, attributeValue) {
-        const element = document.getElementById(elementId);
-        element.setAttribute(attributeName, attributeValue);
-      }
-
       option1.addEventListener("click", () => {
-        // option98.removeAttribute("disabled");
         socket.emit("items_to_order", 1);
 
         flexContainer.innerHTML = `
@@ -358,13 +349,10 @@
       });
 
       option98.addEventListener("click", function (e) {
-        // e.preventDefault();
         orderSection.style.display = "grid";
         socket.emit("generate_completed_orders", true);
       });
       socket.on("completed_orders_list", (orderList) => {
-        // changeAttribute("option98", "disabled", true);
-        // add data to table
         if (orderList.length < 1) {
           const row = orders.insertRow(-1);
 
@@ -375,10 +363,8 @@
           column1.innerText = "Cart is empty";
           column2.innerText = "Cart is empty";
           column3.innerText = "Cart is empty";
-          return;
         }
         orderList.forEach((element, i) => {
-          // if (orderList[i] == orderList[i + 1]) return;
           const row = orders.insertRow(-1);
 
           let column1 = row.insertCell(0);
@@ -401,16 +387,11 @@
 
       socket.on("current_order_item", (lastOrderInArray) => {
         if (lastOrderInArray) {
-          //   currentOrder.innerHTML = `
-          //  <p class="current-order-msg" id="order-message"> Your current order is ${lastOrderInArray.name}, placed on ${lastOrderInArray.time} and its status is '${lastOrderInArray.orderStatus}' </p>`;
           flexContainer.innerHTML = `
           <span class="empty" id="empty"></span>
           <p class="current-order-msg" id="order-message"> Your current order is ${lastOrderInArray.name}, placed on ${lastOrderInArray.time} and its status is '${lastOrderInArray.orderStatus}' </p>
           `;
         } else {
-          // currentOrder.innerHTML = `
-          // <p class="order-not-completed" id="order-message">No current order yet</p>
-          // `;
           flexContainer.innerHTML = `
           <span class="empty" id="empty"></span>
           <p class="order-not-completed" id="order-message">No current order yet</p>
@@ -426,17 +407,11 @@
 
       socket.on("cancel_order", (data) => {
         if (data) {
-          // currentOrder.innerHTML = `
-          //   <p class='order-not-completed' id="order-message">Your current order of ${data.name} placed at ${data.time} has been cancelled 🚮</p>
-          //   `;
           flexContainer.innerHTML = `
           <span class="empty" id="empty"></span>
           <p class='order-not-completed' id="order-message">Your current order of ${data.name} placed at ${data.time} has been cancelled 🚮</p>
           `;
         } else {
-          // currentOrder.innerHTML = `
-          //   <p class="order-not-completed" id="order-message">No order to delete</p>
-          //   `;
           flexContainer.innerHTML = `
           <span class="empty" id="empty"></span>
           <p class="order-not-completed" id="order-message">No order to delete</p>
